gcc/testsuite/rust/rustc/ui/parser/recover/turbofish-arg-with-stray-colon_dg.rs
fn foo() {
    let x = Tr<A, A:>;
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

